--- a/frontend/src/views/Login/statics/css/forgotPassword.css
+++ b/frontend/src/views/Login/statics/css/forgotPassword.css
@@ -1,5 +1,6 @@
 @import "../../../../utils/colors.css";
-@media only screen and (min-width: 1920px) {
+
+@media only screen and (min-width: 1366px) {
   .forgotPassword_Button {
     width: 160px;
     height: 45px;
@@ -11,67 +12,50 @@
   }
   .forgotPassword_label {
     font-weight: normal;
-    font-size: 1.95em;
+    font-size: 1.8em;
   }
 
   .forgotPassword_inputButton {
     outline: none;
     border: none;
-    width: 280px;
+    width: 250px;
     height: 50px;
-    margin-top: 20px;
     border-bottom: 2px solid var(--grey2);
-    font-size: 1.1em;
+    font-size: 1em;
     background: transparent;
   }
-  .forgotPassword_guestButton {
+  .forgotPassword_loginButton {
     width: 160px;
     height: 45px;
     background-color: var(--black);
     color: var(--white);
     border-radius: 12px;
     font-size: 1.05em;
-    margin: 40px;
+    margin-top: 10px;
   }
-  .forgotPassword_inputLabel {
+  .forgotPassword_line {
+    width: 120px;
+    height: 1px;
+    background-color: var(--grey1);
+    margin: 0px auto;
+  }
+  .forgotPassword_lineOr {
+    margin: 0px;
+    padding: 10px;
     font-size: 1.2em;
   }
 }
 
-@media only screen and (max-width: 1919px) {
-  .forgotPassword_Button {
-    width: 160px;
-    height: 45px;
-    background-color: var(--red4);
-    color: var(--white);
-    border-radius: 12px;
-    font-size: 1.02em;
-    margin-top: 30px;
-  }
+@media only screen and (min-width: 1920px) {
   .forgotPassword_label {
-    font-weight: normal;
-    font-size: 2.2em;
+    font-size: 1.95em;
   }
-
   .forgotPassword_inputButton {
-    outline: none;
-    border: none;
     width: 280px;
-    height: 50px;
-    border-bottom: 2px solid var(--grey2);
+    margin-top: 20px;
     font-size: 1.1em;
-    background: transparent;
   }
-  .forgotPassword_guestButton {
-    width: 160px;
-    height: 45px;
-    background-color: var(--black);
-    color: var(--white);
-    border-radius: 12px;
-    font-size: 1.05em;
-    margin: 40px;
-  }
-  .forgotPassword_inputLabel {
-    font-size: 1.2em;
+  .forgotPassword_loginButton {
+    margin-top: 20px;
   }
 }
