--- a/frontend/src/views/Login/statics/css/login.css
+++ b/frontend/src/views/Login/statics/css/login.css
@@ -1,62 +1,26 @@
 @import "../../../../utils/colors.css";
-@media only screen and (min-width: 1920px) {
+
+@media only screen and (min-width: 1366px) {
   .login_root {
     width: 100%;
-    height: 100vh;
     flex-grow: 1;
   }
-  .login_logo {
-    padding: 45px 0px 45px 45px;
-  }
-
   .login_logoBox {
-    width: 100vw;
+    padding: 25px 0px 0px 30px;
   }
   .login_image {
     width: 170px;
-    height: 100px;
     object-fit: contain;
   }
 
-  .login_copyrightContainer {
-    width: 100vw;
-  }
-  .login_copyrightText {
-    font-size: 16px;
-    padding-top: 10px;
-  }
   .login_loginBoxContainer {
-    width: 100vw !important;
+    width: 100% !important;
+    margin-bottom: 30px !important;
   }
 }
 
-@media only screen and (max-width: 1919px) {
-  .login_root {
-    width: 100%;
-    height: 100vh;
-    flex-grow: 1;
-  }
-  .login_logo {
-    padding: 0px 0px 0px 45px;
-  }
-
+@media only screen and (min-width: 1920px) {
   .login_logoBox {
-    width: 100vw;
-  }
-  .login_image {
-    width: 170px;
-    height: 100px;
-    object-fit: contain;
-  }
-  .login_copyrightContainer {
-    width: 100vw;
-  }
-  .login_copyrightText {
-    display: none;
-    font-size: 16px;
-  }
-  .login_loginBoxContainer {
-    width: 100vw !important;
-    max-height: 65vh;
+    padding: 30px 0px 30px 30px;
   }
 }
