--- a/frontend/src/views/Login/statics/css/loginCommon.css
+++ b/frontend/src/views/Login/statics/css/loginCommon.css
@@ -1,50 +1,6 @@
 @import "../../../../utils/colors.css";
-@media only screen and (min-width: 1920px) {
-  .loginCommon_loginButton {
-    width: 160px;
-    height: 45px;
-    background-color: var(--red4);
-    margin-top: 20px;
-    color: var(--white);
-    border-radius: 12px;
-    font-size: 1.1em;
-  }
-  .loginCommon_forgetButton {
-    color: var(-black);
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  .loginCommon_label {
-    font-weight: normal;
-    font-size: 2.2em;
-  }
-  .loginCommon_inputButton {
-    outline: none;
-    border: none;
-    width: 280px;
-    height: 50px;
-    padding: 20px 0px 0px 0px;
-    border-bottom: 2px solid var(--grey2);
-    font-size: 1.1em;
-    background: transparent;
-  }
-  .loginCommon_line {
-    width: 100px;
-    height: 1px;
-    background-color: var(--grey1);
-    margin: 0px auto;
-  }
-  .loginCommon_inputLabel {
-    font-size: 1.2em;
-  }
-  .loginCommon_rememberMeCheckContainer {
-    line-height: 20px;
-    font-size: 0.9em;
-    padding: 30px 0px 20px 0px;
-  }
-}
 
-@media only screen and (max-width: 1919px) {
+@media only screen and (min-width: 1366px) {
   .loginCommon_loginButton {
     width: 160px;
     height: 45px;
@@ -52,41 +8,48 @@
     color: var(--white);
     margin-top: 20px;
     border-radius: 12px;
-    font-size: 1.1em;
+    font-size: 1em;
   }
   .loginCommon_label {
     font-weight: normal;
-    font-size: 2.2em;
+    font-size: 1.85em;
   }
   .loginCommon_inputButton {
     outline: none;
     border: none;
-    width: 280px;
+    width: 250px;
     height: 50px;
     border-bottom: 2px solid var(--grey2);
     padding: 15px 0px 0px 0px;
-    font-size: 1.1em;
+    font-size: 1em;
     background: transparent;
-  }
-  .loginCommon_line {
-    width: 130px;
-    height: 1px;
-    background-color: var(--grey1);
-    margin: 0px auto;
-  }
-  .loginCommon_inputLabel {
-    font-size: 1.2em;
   }
   .loginCommon_rememberMeCheckContainer {
     line-height: 20px;
+    font-size: 0.92em;
     padding: 15px 0px 15px 0px;
-  }
-  .loginCommon_rememberMeCheck {
-    width: 20px;
   }
   .loginCommon_forgetButton {
     color: var(-black);
     text-decoration: underline;
     cursor: pointer;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .loginCommon_forgetButton {
+    color: var(-black);
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .loginCommon_label {
+    font-size: 2.1em;
+  }
+  .loginCommon_inputButton {
+    width: 280px;
+    padding-top: 20px;
+  }
+  .loginCommon_rememberMeCheckContainer {
+    padding: 30px 0px 20px 0px;
   }
 }
