--- a/frontend/src/views/Login/statics/css/signup.css
+++ b/frontend/src/views/Login/statics/css/signup.css
@@ -1,36 +1,32 @@
 @import "../../../../utils/colors.css";
-@media only screen and (min-width: 1920px) {
+
+@media only screen and (min-width: 1366px) {
   .signup_formContainer {
-    max-width: 420px;
+    max-width: 450px;
+  }
+  .signup_buttonContainer {
+    margin: 0px auto;
   }
   .signup_button {
-    max-width: 200px;
-    min-width: 200px;
-    height: 50px;
+    width: 160px;
+    height: 45px;
     background-color: var(--red4);
-    margin: 30px 0px 0px 100px;
     color: var(--white);
     border-radius: 15px;
-    font-size: 1.2em;
+    font-size: 1.15em;
   }
   .signup_label {
     font-weight: normal;
-    font-size: 2.2em;
+    font-size: 2em;
     margin: 0px;
-  }
-  .signup_guestButton {
-    width: 200px;
-    height: 50px;
-    background-color: var(--black);
-    color: var(--white);
-    border-radius: 15px;
-    font-size: 1.2em;
+    padding-bottom: 20px;
+    text-align: center;
   }
   .signup_inputButton {
     outline: none;
     border: none;
     width: 100%;
-    height: 50px;
+    height: 45px;
     border-bottom: 2px solid var(--grey2);
     font-size: 1em;
     background: transparent;
@@ -41,43 +37,20 @@
   }
 }
 
-@media only screen and (max-width: 1919px) {
+@media only screen and (min-width: 1920px) {
   .signup_formContainer {
-    max-width: 350px;
+    max-width: 550px;
   }
   .signup_button {
-    max-width: 200px;
-    min-width: 200px;
+    width: 200px;
     height: 50px;
-    background-color: var(--red4);
-    margin: 30px 0px 0px 75px;
-    color: var(--white);
-    border-radius: 15px;
     font-size: 1.2em;
   }
   .signup_label {
-    font-weight: normal;
     font-size: 2.2em;
-    margin: 0px;
-  }
-  .signup_guestButton {
-    width: 200px;
-    height: 50px;
-    background-color: var(--black);
-    color: var(--white);
-    border-radius: 15px;
-    font-size: 1.2em;
   }
   .signup_inputButton {
-    outline: none;
-    border: none;
-    width: 100%;
     height: 50px;
-    border-bottom: 2px solid var(--grey2);
-    font-size: 1em;
-    background: transparent;
-  }
-  .signup_inputLabel {
-    font-size: 1.2em;
+    font-size: 1.15em;
   }
 }
