--- a/frontend/src/views/Admin/statics/css/commonView.css
+++ b/frontend/src/views/Admin/statics/css/commonView.css
@@ -1,6 +1,6 @@
 @import "../../../../utils/colors.css";
 
-@media only screen and (min-width: 1920px) {
+@media only screen and (min-width: 1366px) {
   .adminCommon_root {
     width: 100%;
     height: 100vh;
@@ -16,9 +16,12 @@
   .adminCommon_textContainer {
     cursor: text;
   }
+  .adminCommon_mainBox {
+    padding: 10px;
+  }
   .adminCommon_text {
     font-weight: bold;
-    font-size: 2.5em;
+    font-size: 2em;
     cursor: text;
   }
   .adminCommon_botBar {
@@ -41,11 +44,11 @@
     background: rgba(15, 15, 15, 0.5);
   }
   .adminSchool_popUpBox {
-    width: 500px;
+    width: 450px;
     height: 280px;
     position: relative;
-    margin-top: 300px !important;
-    margin-left: -350px !important;
+    margin-top: 200px !important;
+    margin-left: -250px !important;
     border-radius: 15px;
     background: var(--white);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
@@ -64,7 +67,7 @@
   }
   .adminSchool_formBox {
     width: 300px !important;
-    margin: 35px auto;
+    margin: 20px auto;
   }
   .adminSchool_submitButtonContainer {
     margin: 20px auto !important;
@@ -82,7 +85,7 @@
     height: 35px;
     background-color: var(--red4);
     color: var(--white);
-    border-radius: 12px;
+    border-radius: 10px;
     font-size: 1.1em;
   }
 
@@ -97,11 +100,11 @@
     background: rgba(15, 15, 15, 0.5);
   }
   .adminDepartment_popUpBox {
-    width: 500px;
-    height: 280px;
+    width: 420px;
+    height: 250px;
     position: relative;
-    margin-top: 300px !important;
-    margin-left: -350px !important;
+    margin-top: 200px !important;
+    margin-left: -250px !important;
     border-radius: 15px;
     background: var(--white);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
@@ -120,10 +123,10 @@
   }
   .adminDepartment_formBox {
     width: 300px !important;
-    margin: 50px auto;
+    margin: 40px auto;
   }
   .adminDepartment_submitButtonContainer {
-    margin: 50px auto !important;
+    margin: 20px auto !important;
   }
   .adminDepartment_inputButton {
     width: 292px;
@@ -131,15 +134,17 @@
     margin-top: 30px;
     outline: none;
     border: 0px;
-    font-size: 1.3em;
     border-bottom: 1px solid rgba(15, 15, 15, 0.3);
+  }
+  .adminDepartment_submitButtonContainer {
+    margin: 40px auto !important;
   }
   .adminDepartment_submitButton {
     width: 120px;
     height: 35px;
     background-color: var(--red4);
     color: var(--white);
-    border-radius: 12px;
+    border-radius: 10px;
     font-size: 1.1em;
   }
 
@@ -154,11 +159,11 @@
     background: rgba(15, 15, 15, 0.5);
   }
   .adminProgram_popUpBox {
-    width: 500px;
-    height: 280px;
+    width: 420px;
+    height: 250px;
     position: relative;
-    margin-top: 300px !important;
-    margin-left: -350px !important;
+    margin-top: 200px !important;
+    margin-left: -250px !important;
     border-radius: 15px;
     background: var(--white);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
@@ -177,10 +182,10 @@
   }
   .adminProgram_formBox {
     width: 300px !important;
-    margin: 50px auto;
+    margin: 40px auto;
   }
   .adminProgram_submitButtonContainer {
-    margin: 50px auto !important;
+    margin: 20px auto !important;
   }
   .adminProgram_inputButton {
     width: 292px;
@@ -188,15 +193,17 @@
     margin-top: 30px;
     outline: none;
     border: 0px;
-    font-size: 1.3em;
     border-bottom: 1px solid rgba(15, 15, 15, 0.3);
+  }
+  .adminProgram_submitButtonContainer {
+    margin: 40px auto !important;
   }
   .adminProgram_submitButton {
     width: 120px;
     height: 35px;
     background-color: var(--red4);
     color: var(--white);
-    border-radius: 12px;
+    border-radius: 10px;
     font-size: 1.1em;
   }
 
@@ -211,11 +218,11 @@
     background: rgba(15, 15, 15, 0.5);
   }
   .adminGroup_popUpBox {
-    width: 500px;
-    height: 280px;
+    width: 420px;
+    height: 250px;
     position: relative;
-    margin-top: 300px !important;
-    margin-left: -350px !important;
+    margin-top: 200px !important;
+    margin-left: -250px !important;
     border-radius: 15px;
     background: var(--white);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
@@ -234,10 +241,10 @@
   }
   .adminGroup_formBox {
     width: 300px !important;
-    margin: 50px auto;
+    margin: 40px auto;
   }
   .adminGroup_submitButtonContainer {
-    margin: 50px auto !important;
+    margin: 20px auto !important;
   }
   .adminGroup_inputButton {
     width: 292px;
@@ -245,15 +252,17 @@
     margin-top: 30px;
     outline: none;
     border: 0px;
-    font-size: 1.3em;
     border-bottom: 1px solid rgba(15, 15, 15, 0.3);
+  }
+  .adminGroup_submitButtonContainer {
+    margin: 40px auto !important;
   }
   .adminGroup_submitButton {
     width: 120px;
     height: 35px;
     background-color: var(--red4);
     color: var(--white);
-    border-radius: 12px;
+    border-radius: 10px;
     font-size: 1.1em;
   }
 
@@ -262,17 +271,18 @@
     width: 100%;
     height: 100vh;
     position: fixed;
+    overflow-y: scroll;
     top: 0px;
     left: 0px;
     z-index: 2;
     background: rgba(15, 15, 15, 0.5);
   }
   .adminStudent_popUpBox {
-    width: 700px;
+    width: 550px;
     height: 560px;
     position: relative;
-    margin-top: 220px !important;
-    margin-left: -350px !important;
+    margin-top: 80px !important;
+    margin-left: -250px !important;
     border-radius: 15px;
     background: var(--white);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
@@ -290,7 +300,7 @@
     cursor: pointer;
   }
   .adminStudent_formBox {
-    width: 550px !important;
+    width: 420px !important;
     margin: 50px auto;
   }
   .adminStudent_submitButtonContainer {
@@ -299,7 +309,6 @@
   .adminStudent_inputButton {
     width: 100%;
     height: 40px;
-    margin-top: 30px;
     outline: none;
     background: transparent;
     border: 0px;
@@ -316,33 +325,119 @@
   }
 }
 
-@media only screen and (max-width: 1919px) {
-  .adminCommon_root {
+@media only screen and (min-width: 1920px) {
+  .adminCommon_text {
+    font-size: 2.2em;
+  }
+  /*Admin School*/
+  .adminSchool_popUpBox {
+    width: 500px;
+    height: 300px;
+    margin-top: 300px !important;
+    margin-left: -350px !important;
+  }
+  .adminSchool_formBox {
+    margin: 35px auto;
+  }
+
+  /*Admin Department*/
+  .adminDepartment_popUpBox {
+    width: 500px;
+    height: 280px;
+    margin-top: 300px !important;
+    margin-left: -350px !important;
+  }
+  .adminDepartment_formBox {
+    margin: 50px auto;
+  }
+  .adminDepartment_submitButtonContainer {
+    margin: 50px auto !important;
+  }
+
+  /*Admin Program*/
+
+  .adminProgram_popUpBox {
+    width: 500px;
+    height: 280px;
+    margin-top: 300px !important;
+    margin-left: -350px !important;
+  }
+  .adminProgram_formBox {
+    margin: 50px auto;
+  }
+  .adminProgram_submitButtonContainer {
+    margin: 50px auto !important;
+  }
+
+  /*Admin Group*/
+
+  .adminGroup_popUpBox {
+    width: 500px;
+    height: 280px;
+    margin-top: 300px !important;
+    margin-left: -350px !important;
+  }
+  .adminGroup_formBox {
+    margin: 50px auto;
+  }
+  .adminGroup_submitButtonContainer {
+    margin: 50px auto !important;
+  }
+
+  /*Admin Student*/
+  .adminStudent_popUpContainer {
     width: 100%;
     height: 100vh;
-    margin: 0px auto !important;
-    flex-grow: 1;
+    position: fixed;
+    overflow-y: scroll;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    background: rgba(15, 15, 15, 0.5);
   }
-  .adminCommon_topBarContainer {
-    width: 95%;
-    margin-top: 20px !important;
+  .adminStudent_popUpBox {
+    width: 650px;
+    height: 600px;
+    position: relative;
+    margin-top: 150px !important;
+    margin-left: -250px !important;
+    border-radius: 15px;
+    background: var(--white);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
-  .adminCommon_topBar {
+  .adminStudent_closeButtonContainer {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 20px;
+    right: 20px;
   }
-  .adminCommon_textContainer {
-    cursor: text;
-  }
-  .adminCommon_text {
-    font-weight: bold;
-    font-size: 2.5rem;
-    cursor: text;
-  }
-  .adminCommon_botBar {
-    width: 95%;
-    margin-top: 0px !important;
-  }
-  .adminCommon_plusIcon {
+  .adminStudent_closeButton {
+    width: 100%;
+    height: 100%;
     cursor: pointer;
-    height: 30px;
+  }
+  .adminStudent_formBox {
+    width: 500px !important;
+    margin: 80px auto;
+  }
+  .adminStudent_submitButtonContainer {
+    margin: 20px auto !important;
+  }
+  .adminStudent_inputButton {
+    width: 100%;
+    outline: none;
+    background: transparent;
+    border: 0px;
+    font-size: 1.3em;
+    border-bottom: 1px solid rgba(15, 15, 15, 0.3);
+  }
+  .adminStudent_submitButton {
+    width: 150px;
+    height: 45px;
+    background-color: var(--red4);
+    color: var(--white);
+    border-radius: 12px;
+    font-size: 1.1em;
   }
 }
