--- a/frontend/src/components/statics/css/adminBoxSmall.css
+++ b/frontend/src/components/statics/css/adminBoxSmall.css
@@ -2,11 +2,12 @@
 
 @media only screen and (min-width: 1366px) {
   .adminBoxSmall_root {
-    flex-grow: "1";
+    flex-grow: 1;
+    position: relative;
   }
   .adminBoxSmall_container {
-    width: 29vw;
-    height: 20vh;
+    width: 90%;
+    height: 180px;
     background: var(--white);
     border-radius: 20px;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
@@ -15,13 +16,13 @@
     border-radius: 50%;
   }
   .adminBoxSmall_row_col_box {
-    height: 220px;
+    height: 180px;
     position: relative;
   }
   .adminBoxSmall_row1 {
   }
   .adminBoxSmall_row2 {
-    height: 220px;
+    height: 180px;
   }
   .adminBoxSmall_buttonContainer {
     height: 35px;
@@ -30,90 +31,32 @@
   }
   .adminBoxSmall_row_col_1 {
     position: relative;
-    top: 15px;
   }
   .adminBoxSmall_row_col_2 {
     position: relative;
   }
   .adminBoxSmall_row_col_1_bold {
-    font-size: 1.7rem;
+    margin: 0;
+    font-size: 1.35rem;
     font-weight: bold;
   }
   .adminBoxSmall_row_col_1_light {
-    font-size: 0.8em;
+    font-size: 1em;
     font-weight: 600;
     color: var(--grey1);
   }
   .adminBoxSmall_row2_bot {
-    position: relative;
-    top: 70px;
+    position: absolute;
+    bottom: 15px;
     text-align: right;
+    word-wrap: normal;
   }
   .adminBoxSmall_row2_bot_text {
+    margin: 0;
     font-size: 0.9em;
     color: var(--blue);
-  }
-  .adminBoxSmall_timeText {
-    font-size: 1em;
-    font-weight: 400;
   }
 }
 
 @media only screen and (min-width: 1920px) {
-  .adminBoxSmall_root {
-    flex-grow: "1";
-  }
-  .adminBoxSmall_container {
-    width: 550px;
-    height: 160px;
-    background: var(--white);
-    border-radius: 20px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-  }
-  .adminBoxSmall_image {
-    border-radius: 50%;
-  }
-  .adminBoxSmall_row_col_box {
-    height: 220px;
-    position: relative;
-  }
-  .adminBoxSmall_row1 {
-  }
-  .adminBoxSmall_row2 {
-    height: 220px;
-  }
-  .adminBoxSmall_buttonContainer {
-    height: 35px;
-    position: relative;
-    top: 20px;
-  }
-  .adminBoxSmall_row_col_1 {
-    position: relative;
-    top: 15px;
-  }
-  .adminBoxSmall_row_col_2 {
-    position: relative;
-  }
-  .adminBoxSmall_row_col_1_bold {
-    font-size: 1.7rem;
-    font-weight: bold;
-  }
-  .adminBoxSmall_row_col_1_light {
-    font-size: 1em;
-    font-weight: 600;
-    color: var(--grey1);
-  }
-  .adminBoxSmall_row2_bot {
-    position: relative;
-    top: 70px;
-    text-align: right;
-  }
-  .adminBoxSmall_row2_bot_text {
-    font-size: 0.9em;
-    color: var(--blue);
-  }
-  .adminBoxSmall_timeText {
-    font-size: 1em;
-    font-weight: 400;
-  }
 }
