--- a/frontend/src/views/Dashboard/components/statics/css/discussionBox.css
+++ b/frontend/src/views/Dashboard/components/statics/css/discussionBox.css
@@ -4,13 +4,21 @@
 	.discussionBox_root {
 		width: 700px;
 		height: 700px;
+		border: 1px solid black;
 	}
 	.discussionBox_chatBox {
+		position: relative;
 		width: 700px;
 		height: 620px;
 		overflow: scroll;
 		border-bottom: 1px solid var(--grey2);
+		border: 1px solid black;
 	}
+	.discussionBox_messageRoot {
+		position: absolute;
+		bottom: 0;
+	}
+
 	.discussionBox_inputField {
 		margin-bottom: 10px !important;
 	}
