--- a/frontend/src/views/Dashboard/components/statics/css/message.css
+++ b/frontend/src/views/Dashboard/components/statics/css/message.css
@@ -1,9 +1,26 @@
 @import "../../../../../utils/colors.css";
 
 @media only screen and (min-width: 1920px) {
-	ul {
-		list-style-type: none;
-		padding: 0;
-		margin: 0;
+	.message_ImageRoot {
+		width: 40px;
+		height: 40px;
+	}
+	.message_Image {
+		border-radius: 50%;
+	}
+	.message_Content {
+		border-radius: 15%;
+		padding: 10px;
+	}
+	.message_root {
+		position: relative;
+		border: 1px solid black;
+	}
+	.message_name {
+		color: var(--grey1);
+		font-weight: bold;
+		margin-left: 40px;
+		margin-bottom: 5px;
+		margin-top: 10px;
 	}
 }
