cleaned up file structure

--- a/frontend/src/views/Notes/components/statics/css/quill.css
+++ b/frontend/src/views/Notes/components/statics/css/quill.css
@@ -18,13 +18,13 @@
 } */
 @font-face {
   font-family: "Pattaya";
-  src: local("Pattaya"), url(../../../assets/fonts/Pattaya.ttf);
+  src: local("Pattaya"), url(../../../../../assets/fonts/Pattaya.ttf);
   /* other formats include: 'woff2', 'truetype, 'opentype',
                             'embedded-opentype', and 'svg' */
 }
 @font-face {
   font-family: "Preeti";
-  src: local("Preeti"), url(../../../assets/fonts/Preeti.ttf);
+  src: local("Preeti"), url(../../../../../assets/fonts/Preeti.ttf);
   /* other formats include: 'woff2', 'truetype, 'opentype',
                             'embedded-opentype', and 'svg' */
 }
