--- a/frontend/src/views/Notes/components/statics/css/tag.css
+++ b/frontend/src/views/Notes/components/statics/css/tag.css
@@ -1,4 +1,4 @@
-@import "../../../utils/colors.css";
+@import "../../../../../utils/colors.css";
 
 @media only screen and (min-width: 1280px) {
   .tag_root {
