--- a/frontend/src/views/ClassSessionCreator/statics/css/classSessionCreator.css
+++ b/frontend/src/views/ClassSessionCreator/statics/css/classSessionCreator.css
@@ -55,7 +55,6 @@
 		padding-right:20px;
 	}
 	.classSession_inputField{
-		
 	}
 	.classSession_inputField{
 		outline: none;
@@ -72,11 +71,22 @@
 	}
 	.classSession_addInstructor{
 		background-color: var(--purple2);
-
 	}
 	.classSession_removeButton{
 		border:none;
 		cursor:pointer;
 		background: transparent;
+		padding:10px;
+	}
+	.classSession_group{
+		min-width: 300px;
+
 	}
 
+	.classSession_groupOuter{
+		min-width: 300px;
+	}
+
+	.MuiPickerDTTabs-tabs {
+		background-color:var(--red4)	!important;
+}
