--- a/frontend/src/components/statics/css/resourceIcons.css
+++ b/frontend/src/components/statics/css/resourceIcons.css
@@ -1,4 +1,4 @@
-@import "../../../../../utils/colors.css";
+@import "../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
   .resourceIcons_iconStyle {
     width: 35px;
