--- a/frontend/src/views/Admin/statics/css/commonView.css
+++ b/frontend/src/views/Admin/statics/css/commonView.css
@@ -332,6 +332,63 @@
     border-radius: 12px;
     font-size: 1.1em;
   }
+
+  /*Admin Teacher*/
+  .adminTeacher_popUpContainer {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    overflow-y: scroll;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    background: rgba(15, 15, 15, 0.5);
+  }
+  .adminTeacher_popUpBox {
+    width: 550px;
+    height: 480px;
+    position: relative;
+    margin-top: 180px !important;
+    margin-left: -250px !important;
+    border-radius: 15px;
+    background: var(--white);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .adminTeacher_closeButtonContainer {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 20px;
+    right: 20px;
+  }
+  .adminTeacher_closeButton {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+  .adminTeacher_formBox {
+    width: 420px !important;
+    margin: 50px auto;
+  }
+  .adminTeacher_submitButtonContainer {
+    margin: 20px auto !important;
+  }
+  .adminTeacher_inputButton {
+    width: 100%;
+    outline: none;
+    background: transparent;
+    border: 0px;
+    font-size: 1.1em;
+    border-bottom: 1px solid rgba(15, 15, 15, 0.3);
+  }
+  .adminTeacher_submitButton {
+    width: 150px;
+    height: 45px;
+    background-color: var(--red4);
+    color: var(--white);
+    border-radius: 12px;
+    font-size: 1.1em;
+  }
 }
 
 @media only screen and (min-width: 1920px) {
