--- a/frontend/src/views/Login/statics/css/loginCommon.css
+++ b/frontend/src/views/Login/statics/css/loginCommon.css
@@ -28,6 +28,7 @@
     line-height: 20px;
     font-size: 0.92em;
     padding: 15px 0px 15px 0px;
+    margin-left: 5px !important;
   }
   .loginCommon_forgetButton {
     color: var(-black);
