--- a/frontend/src/views/Dashboard/components/statics/css/discussionBox.css
+++ b/frontend/src/views/Dashboard/components/statics/css/discussionBox.css
@@ -1,7 +1,7 @@
 @import "../../../../../utils/colors.css";
 
 @media only screen and (min-width: 1280px) {
-  .discussionBox_root {
+  .discussionBox_discussionBoxContainer {
     width: 500px;
     height: 590px;
   }
@@ -33,9 +33,33 @@
     position: relative;
     top: 2px;
   }
+  .discussionBox_root {
+    height: 650px;
+    margin: 0px auto !important;
+    background: var(--white);
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .discussionBox_discussionBoxInside {
+  }
+  .discussionBox_discussionBoxTop {
+  }
+  .discussionBox_smallBlueBox {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--blue);
+    position: relative;
+    margin-left: 20px !important;
+  }
+  .discussionBox_discussionBoxTitle {
+    position: relative;
+    left: 15px;
+    font-size: 1.3em;
+  }
 }
 @media only screen and (min-width: 1920px) {
-  .discussionBox_root {
+  .discussionBox_discussionBoxContainer {
     width: 700px;
     height: 700px;
   }
@@ -43,7 +67,18 @@
     position: relative;
     width: 700px;
     height: 620px;
-    overflow: auto;
-    margin-bottom: 10px !important;
+  }
+  .discussionBox_root {
+    width: 95% !important;
+    height: 800px !important;
+  }
+
+  .discussionBox_discussionBoxTop {
+    width: 100%;
+    height: 100px;
+  }
+
+  .discussionBox_discussionBoxBottom {
+    height: 700px;
   }
 }
